neighbor view changes

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -58,7 +58,7 @@
 
 </style>
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="http://asood123.no-ip.biz/static/jquery.timeago.js"></script>
+<script src="/static/jquery.timeago.js"></script>
 <body>
 <div class="ui-content">
 	<div class='ui-header'> Search/Photos/Arbus </div>
@@ -75,7 +75,7 @@
 			<td class='index-count b-r'> Indexed <br> Photos (%) </td>
 			<td class='faces b-r'> Face <br> Rec (%)  </td>
 			<td class='db-fullimage b-r'> Full <br>images (%) </td>
-			<td class='overfeat b-r'> Overfeat <br> Num (%)  </td>
+			<td class='overfeat b-r'> Overfeat <br> (%)  </td>
 			<td class='classifications b-r'> Image <br> Rec (%)  </td>
 			<td class='last-uploaded-timestamp b-r'> Last Upload </td>
 			<td class='last-updated-timestamp'> Last updated </td>			
