adding device-width to view portal

--- a/peanut/strand/templates/strand/serve_image.html
+++ b/peanut/strand/templates/strand/serve_image.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta name="viewport" content="width=device-width" />
 <style>
 	html, body { 
 		padding: 0; 
@@ -19,6 +22,7 @@
 		display: block; 
 	}
 </style>
+</head>
 <body>
 <div class="ui-photo">
 	<img class='ui-img-tag' src="{{ thumbnailBasepath }}{{ photoId }}.jpg" 
