--- a/peanut/strand/templates/strand/serve_image.html
+++ b/peanut/strand/templates/strand/serve_image.html
@@ -5,20 +5,19 @@
 	html, body { 
 		padding: 0; 
 		margin: 0;
-		height: 100%;
+		/*height: 100%;
 		width: 100%; 
-		display: table;
+		display: table;*/
 	}
 	.ui-photo{
-		width: 100%;
-		height:100%;
+		/*
 		display: table-cell;
-		vertical-align: middle;
+		vertical-align: middle;*/
 	}
 	.ui-img-tag {
-		margin-left: auto;
+		/*margin-left: auto;
 		margin-right: auto;
-		display: block; 
+		display: block; */
 	}
 </style>
 </head>
