--- a/peanut/strand/templates/strand/serve_image.html
+++ b/peanut/strand/templates/strand/serve_image.html
@@ -1,23 +1,23 @@
 <html>
 <head>
-	<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width; height=device-height; user-scalable=no"/> 
 <style>
 	html, body { 
 		padding: 0; 
 		margin: 0;
-		/*height: 100%;
+		height: 100%;
 		width: 100%; 
-		display: table;*/
+		display: table;
 	}
 	.ui-photo{
-		/*
 		display: table-cell;
-		vertical-align: middle;*/
+		vertical-align: middle;
 	}
 	.ui-img-tag {
-		/*margin-left: auto;
+		margin-left: auto;
 		margin-right: auto;
-		display: block; */
+		display: block; 
+		max-width: 100%;
 	}
 </style>
 </head>
