--- a/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
+++ b/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
@@ -30,8 +30,9 @@
                                 <constraint firstAttribute="height" constant="23" id="2dW-bl-1yn"/>
                                 <constraint firstAttribute="width" constant="23" id="6gB-jg-Ehg"/>
                             </constraints>
-                            <state key="normal" image="Assets/Icons/GalleryButton.png">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                            <state key="normal" title="10" backgroundImage="Assets/Icons/GalleryButton.png">
+                                <color key="titleColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                             </state>
                         </button>
                     </subviews>
