--- a/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
+++ b/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
@@ -31,7 +31,7 @@
                                 <constraint firstAttribute="width" constant="23" id="6gB-jg-Ehg"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
-                            <state key="normal" title="10" backgroundImage="Assets/Icons/GalleryButton.png">
+                            <state key="normal" backgroundImage="Assets/Icons/GalleryButton.png">
                                 <color key="titleColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                             </state>
                         </button>
