adding more debug data to summary page

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -88,7 +88,7 @@
 			<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 			<td class='db-count right b-r'> {{ entry.dbCount }} </td>
 			<td class='db-thumbnails right percent b-r' title='{{ entry.thumbsCount }}'> {{ entry.thumbs }} </td>
-			<td class='twofish right percent b-r'>{{ entry.twofish }} </td>
+			<td class='twofish right percent b-r' title='{{ entry.twofishCount }}' >{{ entry.twofish }} </td>
 			<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
 			<td class='index-count right percent b-r'> {{ entry.resultsCount }} </td>
 			<td class='faces right percent b-r'> {{ entry.faces }} </td>
@@ -124,7 +124,7 @@
 			<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 			<td class='db-count right b-r'> {{ entry.dbCount }} </td>
 			<td class='db-thumbnails right percent b-r' title='{{ entry.thumbsCount }}'> {{ entry.thumbs }} </td>
-			<td class='twofish right percent b-r'>{{ entry.twofish }} </td>
+			<td class='twofish right percent b-r' title='{{ entry.twofishCount }}'> {{ entry.twofish }} </td>
 			<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
 			<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
 			<td class='neighbor right b-r'> {{ entry.neighbor }} </td>	
