added push notifications to summary page

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -113,6 +113,7 @@
 			<td class='clustered b-r'> Clustered <br> (%)  </td>
 			<td class='db-fullimage b-r'> Full <br>images (%) </td>
 			<td class='neighbor b-r'> Neighbor <br> (%) </td>
+			<td class='notifications b-r'> Notifications <br> sent </td>
 			<td class='last-uploaded-timestamp b-r'> Last Upload </td>
 			<td class='last-updated-timestamp'> Last updated </td>			
 		</tr>
@@ -127,7 +128,8 @@
 			<td class='twofish right percent b-r' title='{{ entry.twofishCount }}'> {{ entry.twofish }} </td>
 			<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
 			<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
-			<td class='neighbor right b-r'> {{ entry.neighbor }} </td>	
+			<td class='neighbor right b-r'> {{ entry.neighbor }} </td>
+			<td class='notifications right b-r'> {{ entry.notifications }} </td>
 			<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
 			<td class='last-updated-timestamp timeago' title="{{ entry.lastUpdatedTime }}"> </td>			
 		</tr>
