--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -57,7 +57,7 @@
 	}
 
 </style>
-<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="/static/jquery-1.10.2.min.js"></script>
 <script src="/static/jquery.timeago.js"></script>
 <body>
 <div class="ui-content">
