--- a/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
+++ b/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
@@ -36,6 +36,7 @@
                     <rect key="frame" x="0.0" y="5" width="50" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <size key="titleShadowOffset" width="0.0" height="1"/>
                     <state key="normal" title="Auto" image="Assets/Icons/FlashOnButton.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
