remove sad face

--- a/peanut/strand/templates/strand/neighbors.html
+++ b/peanut/strand/templates/strand/neighbors.html
@@ -71,7 +71,7 @@
 				}
 			});
 			if (section.title == 'Recent') {
-				secTop = "<div class='ui-sec-head-top'>Recent photos (not shared :()</div>";
+				secTop = "<div class='ui-sec-head-top'>Recent photos</div>";
 				secBottom = "<div class='ui-sec-head-bottom'> <span class='timeago' title='" + t + "'></span></div>";
 				html = "<div class='ui-sec-header'>" + secTop + secBottom + "</div>";
 			}
