--- a/strand/iOS/Strand/Strand/DFFirstTimeSetupViewController.xib
+++ b/strand/iOS/Strand/Strand/DFFirstTimeSetupViewController.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFFirstTimeSetupViewController">
             <connections>
-                <outlet property="phoneNumberField" destination="mXL-H9-AQn" id="KSz-fo-9wg"/>
+                <outlet property="phoneNumberField" destination="mXL-H9-AQn" id="Agk-AT-KtW"/>
                 <outlet property="statusLabel" destination="hu3-qZ-cOj" id="NbU-rT-S0G"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -44,6 +44,10 @@
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                     <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                    <connections>
+                                        <action selector="phoneNumberFieldValueChanged:" destination="-1" eventType="editingChanged" id="2KF-Hu-4X3"/>
+                                        <outlet property="delegate" destination="-1" id="E5d-19-CNM"/>
+                                    </connections>
                                 </textField>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
